# ai4l-adapter

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
onebot_adapter/: __init__.py  __main__.py  api.py  bot.py  cli.py  config.py  connection.py  event.py  log.py  message.py  server.py
templates/: config.toml
tests/: test_api.py  test_bot.py  test_config.py  test_event.py  test_message.py  test_server.py
